; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_unit.c_set_complete_move.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_unit.c_set_complete_move.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32**)* @set_complete_move to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_complete_move(i32** %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  %5 = alloca i32**, align 8
  store i32** %0, i32*** %4, align 8
  store i32** %1, i32*** %5, align 8
  %6 = load i32**, i32*** %4, align 8
  %7 = call i32 @assert(i32** %6)
  %8 = load i32**, i32*** %5, align 8
  %9 = call i32 @assert(i32** %8)
  %10 = load i32**, i32*** %5, align 8
  %11 = icmp ne i32** %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %29

13:                                               ; preds = %2
  %14 = load i32**, i32*** %4, align 8
  %15 = load i32*, i32** %14, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %23

17:                                               ; preds = %13
  %18 = load i32**, i32*** %4, align 8
  %19 = load i32*, i32** %18, align 8
  %20 = load i32**, i32*** %5, align 8
  %21 = load i32*, i32** %20, align 8
  %22 = call i32 @set_move(i32* %19, i32* %21)
  store i32 %22, i32* %3, align 4
  br label %29

23:                                               ; preds = %13
  %24 = load i32**, i32*** %5, align 8
  %25 = load i32*, i32** %24, align 8
  %26 = call i32* @TAKE_PTR(i32* %25)
  %27 = load i32**, i32*** %4, align 8
  store i32* %26, i32** %27, align 8
  br label %28

28:                                               ; preds = %23
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %28, %17, %12
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @assert(i32**) #1

declare dso_local i32 @set_move(i32*, i32*) #1

declare dso_local i32* @TAKE_PTR(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
